# encounter_simulator_5e

./: Cargo.toml  README.md
crates/es5e_cli/: Cargo.toml
crates/es5e_cli/src/: loader.rs  main.rs  parser.rs  rules.rs  statistics.rs  stats.rs
crates/es5e_cli/src/parser/: actions.rs  combatant.rs
crates/es5e_cli/src/rules/: class.rs  level.rs  spell_slots.rs
crates/es5e_importer/: Cargo.toml
crates/lib_es5e_core/: Cargo.toml
crates/lib_es5e_core/src/: action.rs  attack.rs  character.rs  combat.rs  combatant.rs  lib.rs  statistics.rs  stats.rs  targeting.rs  utils.rs
crates/lib_es5e_core/src/action/: action.rs  attack.rs  effect.rs  multi.rs  negative_effect.rs  single.rs
crates/lib_es5e_core/src/action/negative_effect/: negative_effect.rs
crates/lib_es5e_core/src/attack/: attack.rs  damage.rs  save_based.rs  spell.rs
crates/lib_es5e_core/src/character/: effect.rs
crates/lib_es5e_core/src/combat/: action.rs  action_selection.rs  combatant.rs  encounter.rs  participant.rs  targeting.rs
crates/lib_es5e_core/src/combatant/: combatant.rs  config.rs  defences.rs  state.rs  stats.rs
crates/lib_es5e_core/src/combatant/defences/: ability.rs
crates/lib_es5e_core/src/combatant/state/: combatant_state.rs  resource_config.rs  resources.rs
crates/lib_es5e_core/src/targeting/: random.rs  strategy.rs  target.rs  weakest.rs
crates/lib_es5e_core/src/utils/: dice.rs  dice_roll.rs  probability.rs  rollable.rs  save.rs
src/: attack.rs  character.rs  combat.rs  loader.rs  main.rs  player.rs  players.rs  utils.rs
test_data/: enemies.yaml  players.yaml
(+23 files in other folders)
