[package]
name = "encounter_simulator_5e"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.4"
mockall = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
