[package]
name = "es5e_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_es5e_core = { path = "../lib_es5e_core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", features = [] }
rayon = "1.8.1"
