[package]
name = "lib_es5e_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", features = [] }

[dev-dependencies]
mockall = "0.12"
